--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <title>FlickFix</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="/src/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/src/flickity/flickity.css" media="screen" />
-    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js" defer></script>
     <script src="./script.js" defer></script>
   </head>
   <body>
     <header>
-      <div class="container">
-        <img src="/src/favicon.png" />
-        <h1>FlickFix</h1>
+      <a href="./index.html">
+        <div class="container">
+          <img src="/src/favicon.png">
+          <h1>FlickFix</h1>
+        </div>
+      </a>
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Movies</a></li>
-            <li><a href="#">TV Shows</a></li>
-            <li><a href="#">Celebrities</a></li>
-            <li><a href="#">More</a></li>
+            <li><a href="./action.html">Action</a></li>
+            <li><a href="./animation.html">Animation</a></li>
+            <li><a href="./comedy.html">Comedy</a></li>
+            <li><a href="./drama.html">Drama</a></li>
+            <li><a href="./horror.html">Horror</a></li>
+            <li><a href="./scifi.html">Sci-fi</a></li>
           </ul>
         </nav>
       </div>
@@ -37,12 +39,20 @@
         <div class="slide fade">
           <img src="src/Slideshow/Shawshank.jpg" alt="">
         </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/GrownUps.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/soul.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/lalaland.jpg" alt="">
+        </div>
       </figure>
         <div class="container">
         <h2>Discover Your Next Favorite Movie</h2>
         <p>
-          Find ratings, reviews, and trailers for the latest movies and TV
-          shows.
+          Find honest ratings and descriptions for the greatest movies.
         </p>
         <button>Explore Now</button>
       </div>
@@ -52,30 +62,42 @@
       <div class="container">
         <h2>Featured Movies & TV Shows</h2>
         <div class="featured-items">
-          <div class="featured-item">
-            <div class="poster image1"></div>
-            <h3 class="title1">Movie Title</h3>
-          </div>
-          <div class="featured-item">
-            <div class="poster image2"></div>
-            <h3 class="title2">Movie Title</h3>
-          </div>
-          <div class="featured-item">
-            <div class="poster image3"></div>
-            <h3 class="title3">Movie Title</h3>
-          </div>
-          <div class="featured-item">
-            <div class="poster image4"></div>
-            <h3 class="title4">Movie Title</h3>
-          </div>
-          <div class="featured-item">
-            <div class="poster image5"></div>
-            <h3 class="title5">Movie Title</h3>
-          </div>
-          <div class="featured-item">
-            <div class="poster image6"></div>
-            <h3 class="title6">Movie Title</h3>
-          </div>
+          <a href="" class="link1">
+            <div class="featured-item">
+              <div class="poster image1"></div>
+              <h3 class="title1">Movie Title</h3>
+            </div>
+          </a>
+          <a href="" class="link2">
+            <div class="featured-item">
+              <div class="poster image2"></div>
+              <h3 class="title2">Movie Title</h3>
+            </div>
+          </a>
+          <a href="" class="link3">
+            <div class="featured-item">
+              <div class="poster image3"></div>
+              <h3 class="title3">Movie Title</h3>
+            </div>
+          </a>
+          <a href="" class="link4">
+            <div class="featured-item">
+              <div class="poster image4"></div>
+              <h3 class="title4">Movie Title</h3>
+            </div>
+          </a>
+          <a href="" class="link5">
+            <div class="featured-item">
+              <div class="poster image5"></div>
+              <h3 class="title5">Movie Title</h3>
+            </div>
+          </a>
+          <a href="" class="link6">
+            <div class="featured-item">
+              <div class="poster image6"></div>
+              <h3 class="title6">Movie Title</h3>
+            </div>
+          </a>
         </div>
       </div>
     </section>
