--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       </a>
         <nav>
           <ul>
-            <li><a href="./action.html">Action</a></li>
-            <li><a href="./animation.html">Animation</a></li>
-            <li><a href="./comedy.html">Comedy</a></li>
-            <li><a href="./drama.html">Drama</a></li>
-            <li><a href="./horror.html">Horror</a></li>
-            <li><a href="./scifi.html">Sci-fi</a></li>
+            <li><a class="plink1" href="./action.html">Action</a></li>
+            <li><a class="plink2" href="./animation.html">Animation</a></li>
+            <li><a class="plink3" href="./comedy.html">Comedy</a></li>
+            <li><a class="plink4" href ="./drama.html">Drama</a></li>
+            <li><a class="plink5" href="./horror.html">Horror</a></li>
+            <li><a class="plink6" href="./scifi.html">Sci-fi</a></li>
           </ul>
         </nav>
       </div>
@@ -32,6 +32,9 @@
       <figure class="slideshow">
         <div class="slide fade">
           <img src="src/Slideshow/Schindlers-List.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/theshining.jpg" alt="">
         </div>
         <div class="slide fade">
           <img src="src/Slideshow/500napnyar.jpg" alt="">
@@ -43,10 +46,31 @@
           <img src="src/Slideshow/GrownUps.jpg" alt="">
         </div>
         <div class="slide fade">
+          <img src="src/Slideshow/titanic.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/drstrangelove.jpg" alt="">
+        </div>
+        <div class="slide fade">
           <img src="src/Slideshow/soul.jpg" alt="">
         </div>
         <div class="slide fade">
           <img src="src/Slideshow/lalaland.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/2001.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/it.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/killbill.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/12angrymen.jpg" alt="">
+        </div>
+        <div class="slide fade">
+          <img src="src/Slideshow/fast.jpg" alt="">
         </div>
       </figure>
         <div class="container">
@@ -54,7 +78,7 @@
         <p>
           Find honest ratings and descriptions for the greatest movies.
         </p>
-        <button>Explore Now</button>
+        <button class="explore">Explore Now</button>
       </div>
     </section>
 
