--- a/pages/grownups.html
+++ b/pages/grownups.html
@@ -170,7 +170,7 @@ header nav ul li:nth-child(1) a{
     <header>
         <a href="../index.html">
           <div class="container">
-            <img src="/src/favicon.png">
+            <img src="../src/favicon.png">
             <h1>FlickFix</h1>
           </div>
         </a>
@@ -210,7 +210,7 @@ header nav ul li:nth-child(1) a{
     <footer>
         <div class="contaner">
             <p>
-                &copy 2024 flickFlix
+                &copy 2024 FlickFlix
             </p>
         </div>
     </footer>
