--- a/pages/lalaLand.html
+++ b/pages/lalaLand.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La La Land</title>
-    <link rel="stylesheet" href="lalaland.css">
+    <link rel="stylesheet" href="stylesd.css">
     <script src="./lalaland.js" defer></script>
     </style>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <a href="../index.html">
           <div class="container">
-            <img src="/src/favicon.png">
+            <img src="../src/favicon.png">
             <h1>FlickFix</h1>
           </div>
         </a>
@@ -34,10 +34,9 @@
         <img src="la laland.jpg" alt="La La Land" width="350" height="350">
         <div style="margin-left: 40px;" >
             <h2>La La Land</h2>
-            <p>"California Dream" (original title: "La La Land") is a 2016 American musical romantic drama film directed by Damien Chazelle. The film stars Emma Stone and Ryan Gosling, who play the love story of an actress and a jazz pianist.
-                "California Dream" is a modern musical that takes us to the magical world of Los Angeles as two young dreamers try to find a way in the big city to make their dreams come true. Mia, an aspiring actress, and Sebastian, a jazz musician, develop a special bond with each other as they try to find their place in life and art.
+            <p>La la land is a 2016 American musical romantic drama film directed by Damien Chazelle. The film stars Emma Stone and Ryan Gosling, who play the love story of an actress and a jazz pianist.
+                La la land is a modern musical that takes us to the magical world of Los Angeles as two young dreamers try to find a way in the big city to make their dreams come true. Mia, an aspiring actress, and Sebastian, a jazz musician, develop a special bond with each other as they try to find their place in life and art.
                 The film builds heavily on the atmosphere and analyzes of traditional musicals, while at the same time offering a fresh and modern approach to the genre. The stunning music, iconic dance numbers and vivid images of Los Angeles combine to create a stunning cinematic experience that is both romantic and memorable.
-                "California Dream" was a huge critical and audience success and won numerous awards, including six Academy Awards, including Best Director, Best Actress and Best Picture. The film has achieved cult status over the years and is considered among the modern classics that are worth watching and enjoying over and over again.
                 </p>
             <input type="number" id="numberInput" placeholder="Rate this movie from 1 to 10" min="1" max="10" >
             <p>Viewers' average rating:</p>
@@ -52,7 +51,7 @@
     <footer>
         <div class="contaner">
             <p>
-                &copy 2024 flickFlix
+                &copy 2024 FlickFlix
             </p>
         </div>
     </footer>
