--- a/pages/thefastandthefurious.html
+++ b/pages/thefastandthefurious.html
@@ -12,7 +12,7 @@
     <header>
         <a href="../index.html">
           <div class="container">
-            <img src="/src/favicon.png">
+            <img src="../src/favicon.png">
             <h1>FlickFix</h1>
           </div>
         </a>
@@ -34,10 +34,7 @@
         <img src="halálos iramban.jpg" alt="La La Land" width="350" height="350">
         <div style="margin-left: 40px;" >
             <h2>The Fast and the Furious</h2>
-            <p>These action movies are made for adrenaline and fun seekers.
-                In the series, the characters and the story undergo continuous development, so each new episode holds new adventures and surprises. The first films mainly show the world of illegal car racing, while later the series shifts more and more towards action and chases.
-                The series also has moments that show deeper emotions and relationships between the characters, which further adds to the exciting and entertaining experience of the films.
-                If you haven't seen all the episodes yet, you might want to re-watch the previous ones to recall the story before you start the newer ones. And if you've seen everything, you can wait for the next parts, which will hopefully remain true to the essence and spirit of the series!
+            <p>"The Fast and the Furious" is a high-octane thrill ride that dives headfirst into the world of underground street racing. Paul Walker's portrayal of undercover cop Brian O'Conner, tasked with infiltrating a group of street racers led by Vin Diesel's charismatic Dominic Toretto, sets the stage for a gripping tale of loyalty, rivalry, and adrenaline-fueled action. Director Rob Cohen delivers pulse-pounding races and intense showdowns, making this film a classic of the action genre. With its memorable characters and sleek visuals, "The Fast and the Furious" remains a must-watch for fans of fast cars and furious excitement.
                 </p>
             <input type="number" id="numberInput" placeholder="Rate this movie form 1 to 10" min="1" max="10">
             <p>Viewers' average rating:</p>
@@ -52,7 +49,7 @@
     <footer>
         <div class="contaner">
             <p>
-                &copy 2024 flickFlix
+                &copy 2024 FlickFlix
             </p>
         </div>
     </footer>
