--- a/pages/titanic.html
+++ b/pages/titanic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titanic</title>
-    <link rel="stylesheet" href="titanic.css">
+    <link rel="stylesheet" href="stylesd.css">
     <script src="./titanic.js" defer></script>
     </style>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <a href="../index.html">
           <div class="container">
-            <img src="/src/favicon.png">
+            <img src="../src/favicon.png">
             <h1>FlickFix</h1>
           </div>
         </a>
