--- a/pages/jurassicpark.html
+++ b/pages/jurassicpark.html
@@ -12,7 +12,7 @@
     <header>
         <a href="../index.html">
           <div class="container">
-            <img src="/src/favicon.png">
+            <img src="../src/favicon.png">
             <h1>FlickFix</h1>
           </div>
         </a>
@@ -53,7 +53,7 @@
     <footer>
         <div class="contaner">
             <p>
-                &copy 2024 flickFlix
+                &copy 2024 FlickFlix
             </p>
         </div>
     </footer>
