--- a/pages/rambo.html
+++ b/pages/rambo.html
@@ -12,7 +12,7 @@
     <header>
         <a href="../index.html">
           <div class="container">
-            <img src="/src/favicon.png">
+            <img src="../src/favicon.png">
             <h1>FlickFix</h1>
           </div>
         </a>
@@ -34,9 +34,7 @@
         <img src="Rambo.jpg" alt="La La Land" width="350" height="350">
         <div style="margin-left: 40px;" >
             <h2>Rambo</h2>
-            <p>If you like Rambo movies, you probably enjoy tense and action-packed war dramas in which a single man fights for justice and survival. The Rambo movies offer iconic moments of action and excitement, featuring a hero who overcomes all obstacles to achieve his goal.
-              The series focuses on the former green cap military veteran John Rambo, who after the Vietnam War in the United States struggles with the consequences of his war experiences and the pressures placed on him by society. Rambo's character is deep and complex, and throughout the films we get to experience his inner struggles and the traumas he goes through.
-              The Rambo films often mix action with drama and emotion, and touch on themes such as survival, justice and human endeavour. Each installment in the series offers unique adventures as Rambo applies his fighting skills and strategies against his enemies.
+            <p>"First Blood" introduces audiences to the iconic character of John Rambo, a troubled Vietnam War veteran played by Sylvester Stallone. Set in a small town, the film follows Rambo's tense confrontation with local law enforcement, exploring themes of post-war trauma and the treatment of veterans. Director Ted Kotcheff delivers a suspenseful narrative with explosive action and emotional depth, making "First Blood" a timeless classic in the action genre.
               If you haven't seen all the Rambo movies, you might want to catch up on them to get a complete picture of the series and enjoy the character's iconic moments and amazing action!
                 </p>
             <input type="number" id="numberInput" placeholder="Rate this movie form 1 to 10" min="1" max="10">
@@ -52,7 +50,7 @@
     <footer>
         <div class="contaner">
             <p>
-                &copy 2024 flickFlix
+                &copy 2024 FlickFlix
             </p>
         </div>
     </footer>
