--- a/pages/schindlerslist.html
+++ b/pages/schindlerslist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schindler's List</title>
-    <link rel="stylesheet" href="schindler.css">
+    <link rel="stylesheet" href="stylesd.css">
     <script src="./schindler.js" defer></script>
     </style>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <a href="../index.html">
           <div class="container">
-            <img src="/src/favicon.png">
+            <img src="../src/favicon.png">
             <h1>FlickFix</h1>
           </div>
         </a>
@@ -52,7 +52,7 @@
     <footer>
         <div class="contaner">
             <p>
-                &copy 2024 flickFlix
+                &copy 2024 FlickFlix
             </p>
         </div>
     </footer>
