--- a/horror.html
+++ b/horror.html
@@ -10,7 +10,7 @@
   <header>
     <a href="./index.html">
       <div class="container">
-        <img src="./favicon.png">
+        <img src="./src/favicon.png">
         <h1>FlickFix</h1>
       </div>
     </a>
